# ArchiVision

./: .metadata  .skillsrc  AGENTS.md  README.md  convert.py  pubspec.yaml  skp_wrapper.py
.codex/agents/: mobile-reverser.toml  security-reviewer.toml
.gemini/agents/: mobile-reverser.md  security-reviewer.md
.github/workflows/: build_windows_portable.yml
assets/: DESIGN.md  code.html
lib/: main.dart
lib/services/: api_credentials_store.dart  api_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/skp_processor/: CMakeLists.txt  README.md
native/skp_processor/src/: main.cpp  sketchup_api_guard.cpp  sketchup_api_guard.h  skp_processor.h  skp_render_stub.cpp  skp_thumbnail.cpp
scripts/: Run_ArchiVision.bat  WINDOWS_SETUP.md  build_macos.sh  build_windows.ps1  check_build_env.sh  setup_windows_dev.ps1  setup_windows_runtime.ps1
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
